--- a/index.html
+++ b/index.html
@@ -4,24 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/public/css/styles.css">
     <title>Francisco</title>
 </head>
 <body>
     <header></header>
     <nav class="main-nav">
-        <ul>
-            <li>Quien soy?</li>
-            <li>Proyectos</li>
-            <li>Hobbies</li>
-            <li>Redes Sociales</li>
-        </ul>
+            <div>Quien soy?</div>
+            <div>Proyectos</div>
+            <div>Hobbies</div>
+            <div>Redes Sociales</div>
 </nav>
 
 <section class="quienSoy">
     <h1>Quien soy?</h1>
+    <div class="contquiensoy">
+        Estudiante recien egresado de Ingenieria Mecatronica apasionado de la tecnologia.
+    </div>
+    <div class="foto">
+        <img src="../" alt="">
+    </div>
     
-    Estudiante recien egresado de Ingenieria Mecatronica apasionado de la tecnologia.
+    
 </section>
 <section class="proyectos">
     <h1>Portafolio</h1>
