--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./public/css/styles.css">
+    <link rel="stylesheet" href="./public/css/mediaquerie.css">
     <title>Francisco</title>
 </head>
 <body>
     <section id="container">
-
+        
     </section>
+    <input type="text">
 
 </body>
 
